add basic styles

--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Real Bank</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Welcome to real bank</h1>
+    <a href="deposit.html">Deposit</a>
+    <a href="withdraw.html">Withdraw</a>
+    <a href="transfer.html">Transfer Funds</a>
+    <a href="account-details.html">Check Account Details</a>
+    
+    <script src="main.js"></script>
+</body>
+</html>
+
+
+
+
+
 <!-- 1. Purpose
 The application will simulate basic banking operations, allowing users to manage their accounts, perform transactions, and check account details. It will demonstrate encapsulation for data security and abstraction to hide implementation details.
 
