added more basic styles

--- a/account-details.html
+++ b/account-details.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Account</h1>
-
+    <h2>Checking Amount</h2>
+    <p>$2500.54</p>
+    <h3>Saving Amount</h3>
+    <p>$50.65</p>
 
     <a href="index.html">Home</a>
 <script src="main.js"></script>
