--- a/deposit.html
+++ b/deposit.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>Deposit</h1>
-    
+    <h2>Congrats you successfully deposit $100 dollars</h2>
+    <div>
+    <input type="text">
+</div>
+<div>
+    <button>Enter Deposit Amount</button>
+</div>
     <a href="index.html">Home</a>
 
 <script src="main.js"></script>
