--- a/transfer.html
+++ b/transfer.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Transfer</h1>
+    <h2>Congrat you transfer was successfull</h2>
+    <label for="checking"><input id="checking" name='radio'type="radio">Checking</label>
+    <label for="savings"><input id="savings" name='radio'type="radio">Saving</label>
+    <input type="text" placeholder="Enter an amount to transfer">
+    <label for="checking2"><input id="checking2" name='bob'type="radio">Checking</label>
+    <label for="savings2"><input id="savings2" name='bob'type="radio">Saving</label>
+    <button>Submit</button>
     <a href="index.html">Home</a>
 <script src="main.js"></script>
 </body>
