--- a/withdraw.html
+++ b/withdraw.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Withdraw</h1>
+    <h2>Congrats you successfully withdrawed $100 dollars</h2>
+    <div>
+    <input type="text">
+</div>
+<div>
+    <button>Enter Withdraw Amount</button>
+</div>
     <a href="index.html">Home</a>
 <script src="main.js"></script>
 </body>
